--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
 								<div class="product-thumb">
 									<div class="image zoom">
 										<a href="product-details.html">
-											<img src="img/products/01.jpg" alt="01" height="501" width="385"/>
-											<img src="img/products/02.jpg" alt="02" class="second_image img-responsive" height="501" width="385"/>										</a>
+											<img src="img/products/L001.png" alt="01" height="501" width="385"/>
+											<img src="img/products/L001.png" alt="02" class="second_image img-responsive" height="501" width="385"/>										</a>
 						
 									</div>
 									<div class="thumb-description">
 										<div class="caption">
-											<h4 class="product-title text-capitalize"><a href="product-details.html">Ini Baju </a></h4>
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
 										</div>
 										<div class="rating">
 										<div class="product-ratings d-inline-block align-middle">
@@ -124,8 +124,7 @@
 										   <span class="fa fa-stack"><i class="material-icons off">star</i></span>										</div>
 										</div>
 										<div class="price">
-											<div class="regular-price">Rp.45.000</div>
-											<div class="old-price">Rp.68.000</div>
+											<div class="regular-price">Rp.35.000</div>
 										</div>
 										<div class="button-wrapper">
 											<p>Kode : L001</p>
@@ -137,13 +136,13 @@
 								<div class="product-thumb">
 									<div class="image zoom">
 										<a href="product-details.html">
-											<img src="img/products/02.jpg" alt="02" height="501" width="385"/>
-											<img src="img/products/03.jpg" alt="03" class="second_image img-responsive" height="501" width="385"/>										</a>
+											<img src="img/products/L002.png" alt="02" height="501" width="385"/>
+											<img src="img/products/L002.png" alt="03" class="second_image img-responsive" height="501" width="385"/>										</a>
 							
 									</div>
 									<div class="thumb-description">
 										<div class="caption">
-											<h4 class="product-title text-capitalize"><a href="product-details.html">Ini Baju 2</a></h4>
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
 										</div>
 										<div class="rating">
 										<div class="product-ratings d-inline-block align-middle">
@@ -154,8 +153,7 @@
 										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										</div>
 										</div>
 										<div class="price">
-											<div class="regular-price">Rp.47.000</div>
-											<div class="old-price">Rp.70.000</div>
+											<div class="regular-price">Rp.35.000</div>
 										</div>
 										<div class="button-wrapper">
 										<div class="button-group text-center">
@@ -169,11 +167,11 @@
 								<div class="product-thumb">
 									<div class="image zoom">
 										<a href="product-details.html">
-											<img src="img/products/03.jpg" alt="03" height="501" width="385"/>
-											<img src="img/products/04.jpg" alt="04" class="second_image img-responsive" height="501" width="385"/></a></div>
+											<img src="img/products/L003.png" alt="03" height="501" width="385"/>
+											<img src="img/products/L003.png" alt="04" class="second_image img-responsive" height="501" width="385"/></a></div>
 									<div class="thumb-description">
 										<div class="caption">
-											<h4 class="product-title text-capitalize"><a href="product-details.html">Ini Baju 3</a></h4>
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
 										</div>
 										<div class="rating">
 											<div class="product-ratings d-inline-block align-middle">
@@ -184,8 +182,7 @@
 										   <span class="fa fa-stack"><i class="material-icons off">star</i></span>										   </div>
 										</div>
 										<div class="price">
-											<div class="regular-price">Rp.44.000</div>
-											<div class="old-price">Rp.65.000</div>
+											<div class="regular-price">Rp.30.000</div>
 										</div>
 										<div class="button-wrapper">
 										<div class="button-group text-center">
@@ -199,11 +196,11 @@
 								<div class="product-thumb">
 									<div class="image zoom">
 										<a href="product-details.html">
-											<img src="img/products/04.jpg" alt="04" height="501" width="385"/>
-											<img src="img/products/05.jpg" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+											<img src="img/products/L004.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L004.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
 									<div class="thumb-description">
 										<div class="caption">
-											<h4 class="product-title text-capitalize"><a href="product-details.html">Ini Baju 4</a></h4>
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
 										</div>
 										<div class="rating">
 											<div class="product-ratings d-inline-block align-middle">
@@ -214,8 +211,7 @@
 										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
 										</div>
 										<div class="price">
-											<div class="regular-price">Rp.50.000</div>
-											<div class="old-price">Rp.75.000</div>
+											<div class="regular-price">Rp.30.000</div>
 										</div>
 										<div class="button-wrapper">
 										<div class="button-group text-center">
@@ -229,11 +225,11 @@
 								<div class="product-thumb">
 									<div class="image zoom">
 										<a href="product-details.html">
-											<img src="img/products/04.jpg" alt="04" height="501" width="385"/>
-											<img src="img/products/05.jpg" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+											<img src="img/products/L005.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L005.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
 									<div class="thumb-description">
 										<div class="caption">
-											<h4 class="product-title text-capitalize"><a href="product-details.html">Ini Baju 5</a></h4>
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
 										</div>
 										<div class="rating">
 											<div class="product-ratings d-inline-block align-middle">
@@ -244,12 +240,123 @@
 										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
 										</div>
 										<div class="price">
-											<div class="regular-price">Rp.50.000</div>
-											<div class="old-price">Rp.75.000</div>
+											<div class="regular-price">Rp.35.000</div>
 										</div>
 										<div class="button-wrapper">
 										<div class="button-group text-center">
 										<p>Kode : L005</p>
+										</div>
+										</div>
+									</div>
+								</div>
+								<div class="product-layouts">
+								<div class="product-thumb">
+									<div class="image zoom">
+										<a href="product-details.html">
+											<img src="img/products/L006.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L006.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+									<div class="thumb-description">
+										<div class="caption">
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
+										</div>
+										<div class="rating">
+											<div class="product-ratings d-inline-block align-middle">
+											<span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
+										</div>
+										<div class="price">
+											<div class="regular-price">Rp.35.000</div>
+										</div>
+										<div class="button-wrapper">
+										<div class="button-group text-center">
+										<p>Kode : L006</p>
+										</div>
+										</div>
+									</div>
+								</div>
+									<div class="product-layouts">
+								<div class="product-thumb">
+									<div class="image zoom">
+										<a href="product-details.html">
+											<img src="img/products/L007.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L007.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+									<div class="thumb-description">
+										<div class="caption">
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
+										</div>
+										<div class="rating">
+											<div class="product-ratings d-inline-block align-middle">
+											<span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
+										</div>
+										<div class="price">
+											<div class="regular-price">Rp.30.000</div>
+										</div>
+										<div class="button-wrapper">
+										<div class="button-group text-center">
+										<p>Kode : L007</p>
+										</div>
+										</div>
+									</div>
+								</div>
+										<div class="product-layouts">
+								<div class="product-thumb">
+									<div class="image zoom">
+										<a href="product-details.html">
+											<img src="img/products/L008.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L008.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+									<div class="thumb-description">
+										<div class="caption">
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
+										</div>
+										<div class="rating">
+											<div class="product-ratings d-inline-block align-middle">
+											<span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
+										</div>
+										<div class="price">
+											<div class="regular-price">Rp.35.000</div>
+										</div>
+										<div class="button-wrapper">
+										<div class="button-group text-center">
+										<p>Kode : L008</p>
+										</div>
+										</div>
+									</div>
+								</div>
+											<div class="product-layouts">
+								<div class="product-thumb">
+									<div class="image zoom">
+										<a href="product-details.html">
+											<img src="img/products/L009.png" alt="04" height="501" width="385"/>
+											<img src="img/products/L009.png" alt="05" class="second_image img-responsive" height="501" width="385"/>										</a>									</div>
+									<div class="thumb-description">
+										<div class="caption">
+											<h4 class="product-title text-capitalize"><a href="product-details.html"></a></h4>
+										</div>
+										<div class="rating">
+											<div class="product-ratings d-inline-block align-middle">
+											<span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>
+										   <span class="fa fa-stack"><i class="material-icons">star</i></span>										   </div>
+										</div>
+										<div class="price">
+											<div class="regular-price">Rp.35.000</div>
+										</div>
+										<div class="button-wrapper">
+										<div class="button-group text-center">
+										<p>Kode : L009</p>
 										</div>
 										</div>
 									</div>
